# urdf-step-assembler

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/sample_robot/: sample_robot.urdf
examples/sample_robot/meshes/: base_link.stl  link1.stl
scripts/: smoke_test.sh
src/urdf_step_assembler/: __init__.py  cli.py
tests/: test_failure_modes.py  test_mesh_repair.py  test_mesh_resolver.py  test_sample_robot_integration.py
